[package]
name = "rust-repos"
version = "0.1.0"
edition = "2021"

[toolchain]
channel = "nightly"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = "0.4"
nalgebra = "0.32.3"
nalgebra-sparse = "0.9.0"
approx = "0.5.1"
num-traits = "0.2.17"
matrixcompare = "0.3.0"
once_cell = "1.18.0"
simba = "0.8.1"
thiserror = "1.0.50"
chrono = "0.4.31"
clap = { version = "4.5.0", features = ["derive"] }

