[package]
name = "rust-repos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = "0.4"
#nalgebra = { path = "../nalgebra" }
nalgebra = "0.32.3"
nalgebra-sparse = "0.9.0"
approx = "0.5.1"
num-traits = "0.2.17"